# Competitive-Programming

./: .gitignore  AIO_CoreysParty.cpp  CC_Calculator.cpp  CC_ChefAndFeast.cpp  CC_ChefAndMagicArrays.cpp  CC_ChefAndPrimeQueries.cpp  CC_ChefAndXorQueries.cpp  CC_ChefandCycledCycles.cpp  CC_Impersonating.cpp  CC_PairWiseUnionOfSet.cpp  CC_RobotsInADAG  CC_RobotsInADAG.cpp  CC_SNCOUP.cpp  CC_SerejaAndCommands.cpp  CC_TiduAndRatings.cpp  CC_TravelingMinister.cpp  CC_Triplets.cpp  CC_WeaselDoesXOROnTree.cpp  CC_WeirdBacteria.cpp  CF220B_LittleElephantAndArray.cpp  CF27E_SmallestNumberWithGivenDivisors.cpp  CF525E_AnyaAndCubes.cpp  CF747C_Servers.cpp  CF747D_WinterIsComing.cpp  CMakeLists.txt  ChefAndTraingles.cpp  FightingZombies.cpp  FractionsAgain  HolidayOfEquity  IARCS_PayingThePrice.cpp  INOI2017P2  INOI_HighwayBypass.cpp  INOI_SequenceLand.cpp  INOI_TableSum.cpp  IOITC_BabaAndBitmasks.cpp  MaxPath.cpp  Misc.cpp  OPC_EqualGifts.cpp  OPC_SiruseriMetro.cpp  PROC17_Traffic.cpp  (+41 more)
ComputationalGeometry/: GeometrySucks!!!!!  IOITC2014_Crystals.cpp
ComputationalGeometry/Implementation/: GeometryStuff.cpp  PointsLinesAndStuff.cpp
DataStructures/: (TODO)HackerEarth_LittleDeepuAndArray.cpp  (TODO)OPC_FindThePermutation.cpp  (TODO)SPOJ_DynamicGraphConnectivity.cpp  CC_BlockedWebsites.cpp  CC_ChefAndGraphQueries.cpp  CC_ChefAndMediumProblem2.cpp  CC_ChefAndOddQueries.cpp  CC_ChefAndQueries.cpp  CC_ChefAndSubarrayQueries.cpp  CC_ChefAndSubarrayQueries2.cpp  CC_CloneMe.cpp  CC_CyclistRace.cpp  CC_GiveAway.cpp  CC_LoversGift.cpp  CC_LoversGift2.cpp.cpp  CC_MultiplesOf3.cpp  CC_PishtyAndTree.cpp  CC_PishtyAndTree_Alternate.cpp  CC_Sorting.cpp  CC_StrangeQueries.cpp  CC_SubInversing.cpp  CC_TULIPS.cpp  CC_XorQueries.cpp  CF145E_LuckyQueries.cpp  CF226E_NobleKnightsPath.cpp  CF342E_XeniaAndTree.cpp  CF342E_XeniaAndTree_Centroid.cpp  CF348C_SubsetSums.cpp  CF375D_TreeAndQueries.cpp  CF398D_InstantMessenger.cpp  CF438D_TheChildAndSequence.cpp  CF446C_DZYLovesFibonacciNumbers.cpp  CF506_MrKutayutasColorfulGraph.cpp  CF589G_Hiring.cpp  CF600E_LomsatGelral.cpp  CF617E_XORAndFavouriteNumber.cpp  CF686D_KayAndSnowflake.cpp  CF86D_PowerfulArray.cpp  CF899E_SegmentsRemoval.cpp  CF899F_LettersRemoving.cpp  (+57 more)
DataStructures/Implementation/: BinaryIndexedTrees.cpp  ConvexHullTrick.cpp  (+15 more)
DynamicProgramming/: CC_PartitionCount.cpp  CC_SealingUp.cpp  CC_TiduAndFrustratedTeacher.cpp  CC_TooMuchSweetness.cpp  CF118D_CaesarsLegions.cpp  CF311B_CatsTransport.cpp  CF319C_KalilaAndDimna.cpp  CF321E_CielAndGondolas.cpp  CF347D_LuckyCommonSubsequence.cpp  CF347D_LuckyCommonSubsequence2.cpp  CF383D_Antimatter.cpp  CF385C_BearAndPrimeNumbers.cpp  CF407B_LongPath.cpp  CF414B_MashmokhAndACM.cpp  CF416C_BookingSystem.cpp  CF430D_WorkingOut.cpp  CF466D_IncreaseSequence.cpp  CF474D_Flowers.cpp  CF478D_RedGreenTowers.cpp  CF479D_RidingInALift.cpp  CF495D_ObsessiveString.cpp  CF4D_MysteriousPresent.cpp  CF507D_TheMathsLecture.cpp  CF544C_WritingCode.cpp  CF580D_KefaAndDishes.cpp  CF588D_DuffInBeach.cpp  CF61D_EternalVictory.cpp  CF626F_GroupProjects.cpp  CF628B_NewSkateboard.cpp  CF706C_HardProblem.cpp  CF711C_ColoringTrees.cpp  CF762D_MaximumPath.cpp  CF789C_FunctionsAgain.cpp  CF81E_Pairs.cpp  CF837D_RoundSubset.cpp  CF864E_Fire.cpp  CoinChange.cpp  Exun2017_Digex.cpp  Exun2017_DigexReturns.cpp  ExunPrelimsP2.cpp  (+50 more)
GraphTheory/: APIO2009_ATMRobbery.cpp  CC_KingdomUnity.cpp  CC_TALCA.cpp  CC_VasyaAndLittleBear.cpp  CF115A_Party.cpp  CF257B_JzzhuAndCities.cpp  CF505D_KitayutasTechnology.cpp  CF567E_PresidentAndRoads.cpp  CF659E_NewReform.cpp  CF716D_CompleteTheGraph.cpp  CF764C_TimofeyAndTree.cpp  CF796D_PoliceStations.cpp  CF892E_Envy.cpp  CF919D_Substring.cpp  CF932D_Tree.cpp  CF950E_DataCenterMaintenance.cpp  CSA_TriangularMatrix.cpp  IOI2009_Mecho.cpp  IOITC2010_AmusementPark.cpp  IOITC2010_Police.cpp  IOITC2011_Circulation.cpp  IOITC2011_Dilemma.cpp  IOITC2011_FairSelection.cpp  IOITC2011_Passports.cpp  IOITC2012_Facebook.cpp  IOITC2013_CateringContractsRemix.cpp  IOITC2013_HappyJourney.cpp  IOITC2013_MeetingPoint.cpp  IOITC2014_Compilation.cpp  IOITC2015_Hospital.cpp  IOITC2015_IslandsAndBridges.cpp  IOITC2015_MonsterChallenge.cpp  IOITC2016_BFSTree.cpp  IOITC2016_CentralNodes.cpp  IOITC2016_DecomposingTree.cpp  IOITC_GraphLIS.cpp  OPC_HighSpeedNetwork.cpp  SPOJ_AMR10J.cpp  SPOJ_DynamicGraphConnectivity2.cpp  SPOJ_LCA.cpp  (+4 more)
ICOPracticeProblems/: YetAnotherGeometryProblem.cpp  a.out
Miscellaneous/: BitMasking.cpp  BlownGarland.cpp  CCC_GreedyForPies.cpp  CC_ CHEFPCHF.cpp  CC_BrokenClock.cpp  CC_CAPTCITI.cpp  CC_CHEFSIGN.cpp  CC_Calculator.cpp  CC_ChefAndDice.cpp  CC_ChefAndFibonacciArray.cpp  CC_ChefAndSubarray.cpp  CC_ChefAndSubsequences.cpp  CC_ChefAndVolunteerService.cpp  CC_ChefGoesLeftRight.cpp  CC_CleaningTheSpace.cpp  CC_ConnectingComputers.cpp  CC_ConsecutiveSnakes.cpp  CC_FillTheMatrix.cpp  CC_IPCTrainers.cpp  CC_JosephLand.cpp  CC_ProductOnSegment.cpp  CC_PyramidFalls.cpp  CC_ShootingOnTheArray.cpp  CC_SnakesAndDiscussion.cpp  CC_SnakesAndGraph.cpp  CC_SumOfCubes.cpp  CC_WeaselDoesXOROnTree.cpp  CC_WeaselFindsStaircase.cpp  CF13E_Holes.cpp  CF27E_SmallestNumberWithGivenDivisors.cpp  CF340D_BubbleSortGraph.cpp  CF519E_AAndBLectureRooms.cpp  CF688E_TheValuesYouCanMake.cpp  CF747D_WinterIsComing.cpp  COREPrelims_AuntyPrime.cpp  HolidayOfEquity.cpp  IARCS_RankFraud.cpp  INOI2017P2.cpp  INOI_BinaryStrings.cpp  INOI_Triathlon.cpp  (+49 more)
OtherAlgorithms/: Bitmasks.cpp  FastIO.cpp  GreatestCommonDivisor.cpp  IntervalPartitioning.cpp  IntervalScheduling.cpp  KnapsackProblem.cpp  Knuth-Morris-Pratt-Algorithm.cpp  LongestIncreasingSubsequence.cpp  ManachersAlgo.cpp  MatrixExponentiation-FibSequence.cpp  MatrixExponentiation.cpp  Max2DRangeSum.cpp  ModularInverse.cpp  MosAlgorithm.cpp  RandomNumbers.cpp  SPOJ_DynamicGraphConnectivity2.cpp  Sieve.cpp  SlopeTrick.cpp  TernarySearch.cpp  a.out
SyntaxProgrammingProblems/: CheapTravel.cpp  FancyFence.cpp  GoodSequences.cpp  GraphReversal.cpp  HelpTheSplitCorgis.cpp  HowManyRoutes.cpp  MinimumPossibleTraverse.cpp  ModifiedLCS.cpp  SolveTheGivenEquation.cpp  a.out  inp.txt  out.txt
(+286 files in other folders)
