cmake_minimum_required(VERSION 3.8)
project(Competitive_Programming)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ComputationalGeometry/Implementation/PointsLinesAndStuff.cpp
        DataStructures/Implementation/BinaryIndexedTrees.cpp
        DataStructures/Implementation/DisjointSets.cpp
        DataStructures/Implementation/LazyPropSegmentTree_IntervalSum.cpp
        DataStructures/Implementation/MergeSortTree.cpp
        DataStructures/Implementation/PersistentSegmentTree.cpp
        DataStructures/Implementation/Pointers.cpp
        DataStructures/Implementation/SegmentTree_RMQ.cpp
        "DataStructures/(TODO)HackerEarth_LittleDeepuAndArray.cpp"
        "DataStructures/(TODO)OPC_FindThePermutation.cpp"
        "DataStructures/(TODO)SPOJ_DynamicGraphConnectivity.cpp"
        DataStructures/CC_BlockedWebsites.cpp
        DataStructures/CC_MultiplesOf3.cpp
        DataStructures/HackerEarth_CityAndCampers2.cpp
        DataStructures/HackerEarth_CityAndSoldiers.cpp
        DataStructures/HackerEarth_FightInNinjaWorld.cpp
        DataStructures/HackerEarth_HelpAshu.cpp
        DataStructures/HackerEarth_ModifiedLIS.cpp
        DataStructures/HackerEarth_MonkAndOtakuland.cpp
        DataStructures/HackerEarth_RoyAndCoinBoxes.cpp
        DataStructures/SPOJ_DQuery.cpp
        DataStructures/SPOJ_KQuery.cpp
        DataStructures/SPOJ_KQuery2.cpp
        DataStructures/SPOJ_KthNumber.cpp
        DataStructures/SPOJ_OrderStatisticSet.cpp
        DynamicProgramming/OnTrees/CF161D_DistanceTree.cpp
        DynamicProgramming/OnTrees/CF337D_BookOfEvil.cpp
        DynamicProgramming/OnTrees/CF440D_BerlandFederalization.cpp
        DynamicProgramming/OnTrees/CF462D_ApplemanAndTree.cpp
        DynamicProgramming/OnTrees/CF682C_AlyonaAndTheTree.cpp
        DynamicProgramming/OnTrees/CF758E_BrokenTree.cpp
        DynamicProgramming/OnTrees/CF771C_BearAndTreeJumps.cpp
        DynamicProgramming/OnTrees/CFDPOnTreesTutP3b.cpp
        DynamicProgramming/OnTrees/CFDPOnTreesTutP4.cpp
        DynamicProgramming/OnTrees/HackerEarth_CountingOnTree.cpp
        DynamicProgramming/OnTrees/IOI2005_Rivers.cpp
        DynamicProgramming/OnTrees/IOITC_CateringContracts.cpp
        DynamicProgramming/OnTrees/OPC_3WaySplit.cpp
        DynamicProgramming/OnTrees/OPC_CateringContracts.cpp
        DynamicProgramming/OnTrees/SubtreesWithKNodes.cpp
        DynamicProgramming/OnTrees/TIMUS_BinaryAppleTree.cpp
        DynamicProgramming/CC_SealingUp.cpp
        DynamicProgramming/CC_TiduAndFrustratedTeacher.cpp
        DynamicProgramming/CF347D_LuckyCommonSubsequence.cpp
        DynamicProgramming/CF347D_LuckyCommonSubsequence2.cpp
        DynamicProgramming/CF385C_BearAndPrimeNumbers.cpp
        DynamicProgramming/CF414B_MashmokhAndACM.cpp
        DynamicProgramming/CF416C_BookingSystem.cpp
        DynamicProgramming/CF430D_WorkingOut.cpp
        DynamicProgramming/CF474D_Flowers.cpp
        DynamicProgramming/CF478D_RedGreenTowers.cpp
        DynamicProgramming/CF4D_MysteriousPresent.cpp
        DynamicProgramming/CF507D_TheMathsLecture.cpp
        DynamicProgramming/CF544C_WritingCode.cpp
        DynamicProgramming/CF580D_KefaAndDishes.cpp
        DynamicProgramming/CF588D_DuffInBeach.cpp
        DynamicProgramming/CF61D_EternalVictory.cpp
        DynamicProgramming/CF628B_NewSkateboard.cpp
        DynamicProgramming/CF706C_HardProblem.cpp
        DynamicProgramming/CF711C_ColoringTrees.cpp
        DynamicProgramming/CF762D_MaximumPath.cpp
        DynamicProgramming/CF789C_FunctionsAgain.cpp
        DynamicProgramming/CF837D_RoundSubset.cpp
        DynamicProgramming/CoinChange.cpp
        DynamicProgramming/INOI_Brackets.cpp
        DynamicProgramming/INOI_CalvinsGame.cpp
        DynamicProgramming/INOI_SpecialSums.cpp
        DynamicProgramming/OPC_LongestPalindrome.cpp
        DynamicProgramming/OPC_NumberOfTilings.cpp
        DynamicProgramming/SPOJ_ACMaker.cpp
        DynamicProgramming/SPOJ_Activities.cpp
        DynamicProgramming/SPOJ_Aibohphobia.cpp
        DynamicProgramming/SPOJ_Alphacode.cpp
        DynamicProgramming/SPOJ_BuyingApples.cpp
        DynamicProgramming/USACO2017P2.cpp
        DynamicProgramming/UVa10306_eCoins.cpp
        DynamicProgramming/UVa10337_FlightPlanner.cpp
        DynamicProgramming/UVa10496_CollectingBeepers.cpp
        DynamicProgramming/UVa10616_DivisibleGroupSums.cpp
        DynamicProgramming/UVa10721_BarCodes.cpp
        DynamicProgramming/UVa10819_TroubleOf13Dots.cpp
        DynamicProgramming/UVa11284_ShoppingTrip.cpp
        DynamicProgramming/UVa11517_ExactChange.cpp
        DynamicProgramming/UVa11566_LetsYumCha.cpp
        DynamicProgramming/UVa216_GettingInLine.cpp
        DynamicProgramming/UVa357_LetMeCountTheWays.cpp
        DynamicProgramming/ZCO_Rectangle.cpp
        GraphTheory/Implementation/Algorithm_BellmanFord.cpp
        GraphTheory/Implementation/Algorithm_Dijkstra.cpp
        GraphTheory/Implementation/Algorithm_FloydWarshall.cpp
        GraphTheory/Implementation/Algorithm_Kruskals.cpp
        GraphTheory/Implementation/ArticulationPointsAndBridges.cpp
        "GraphTheory/Implementation/LowestCommonAncestor(BinaryLifting).cpp"
        GraphTheory/Implementation/LowestCommonAncestor.cpp
        GraphTheory/Implementation/SCCTarjan.cpp
        GraphTheory/Implementation/TopologicalSort.cpp
        GraphTheory/APIO2009_ATMRobbery.cpp
        GraphTheory/CC_KingdomUnity.cpp
        GraphTheory/CF764C_TimofeyAndTree.cpp
        GraphTheory/IOI2009_Mecho.cpp
        GraphTheory/OPC_HighSpeedNetwork.cpp
        GraphTheory/SPOJ_LCA.cpp
        ICOPracticeProblems/AbsolutelyIncreasingSubsequence/AbsolutelyIncreasingSubsequence.cpp
        ICOPracticeProblems/AStandardTreeProblem/AStandardTreeProblem.cpp
        ICOPracticeProblems/Codeatsi/Codeatsi.cpp
        ICOPracticeProblems/NinjaCake/NinjaCake.cpp
        ICOPracticeProblems/PyramidFalls/PyramidFalls.cpp
        ICOPracticeProblems/YetAnotherGeometryProblem/YetAnotherGeometryProblem.cpp
        ICOPracticeProblems/YetAnotherGeometryProblem.cpp
        OtherAlgorithms/GreatestCommonDivisor.cpp
        OtherAlgorithms/IntervalPartitioning.cpp
        OtherAlgorithms/IntervalScheduling.cpp
        OtherAlgorithms/KnapsackProblem.cpp
        OtherAlgorithms/LongestIncreasingSubsequence.cpp
        OtherAlgorithms/ManachersAlgo.cpp
        OtherAlgorithms/MatrixExponentiation-FibSequence.cpp
        OtherAlgorithms/MatrixExponentiation.cpp
        OtherAlgorithms/Max2DRangeSum.cpp
        OtherAlgorithms/TernarySearch.cpp
        SyntaxProgrammingProblems/CheapTravel.cpp
        SyntaxProgrammingProblems/FancyFence.cpp
        SyntaxProgrammingProblems/GoodSequences.cpp
        SyntaxProgrammingProblems/GraphReversal.cpp
        SyntaxProgrammingProblems/HelpTheSplitCorgis.cpp
        SyntaxProgrammingProblems/HowManyRoutes.cpp
        SyntaxProgrammingProblems/MinimumPossibleTraverse.cpp
        SyntaxProgrammingProblems/ModifiedLCS.cpp
        SyntaxProgrammingProblems/SolveTheGivenEquation.cpp
        BitMasking.cpp
        BlownGarland.cpp
        "CC_ CHEFPCHF.cpp"
        CC_Calculator.cpp
        CC_CAPTCITI.cpp
        CC_ChefandCycledCycles.cpp
        CC_ChefAndDice.cpp
        CC_ChefAndFeast.cpp
        CC_ChefAndFibonacciArray.cpp
        CC_ChefAndMagicArrays.cpp
        CC_ChefAndPrimeQueries.cpp
        CC_ChefAndSubarray.cpp
        CC_ChefAndSubsequences.cpp
        CC_ChefAndTraingles.cpp
        CC_ChefAndVolunteerService.cpp
        CC_CHEFSIGN.cpp
        CC_CleaningTheSpace.cpp
        CC_ConnectingComputers.cpp
        CC_ConsecutiveSnakes.cpp
        CC_FillTheMatrix.cpp
        CC_Impersonating.cpp
        CC_IPCTrainers.cpp
        CC_JosephLand.cpp
        CC_PairWiseUnionOfSet.cpp
        CC_PyramidFalls.cpp
        CC_RobotsInADAG.cpp
        CC_SerejaAndCommands.cpp
        CC_ShootingOnTheArray.cpp
        CC_SnakesAndDiscussion.cpp
        CC_SnakesAndGraph.cpp
        CC_SNCOUP.cpp
        CC_SumOfCubes.cpp
        CC_TiduAndRatings.cpp
        CC_TravelingMinister.cpp
        CC_Triplets.cpp
        CC_WeaselDoesXOROnTree.cpp
        CC_WeaselFindsStaircase.cpp
        CC_WeirdBacteria.cpp
        CCC_GreedyForPies.cpp
        CF27E_SmallestNumberWithGivenDivisors.cpp
        CF747C_Servers.cpp
        CF747D_WinterIsComing.cpp
        COREPrelims_AuntyPrime.cpp
        FightingZombies.cpp
        HolidayOfEquity.cpp
        INOI2017P2.cpp
        INOI_BinaryStrings.cpp
        INOI_HighwayBypass.cpp
        INOI_SequenceLand.cpp
        INOI_TableSum.cpp
        INOI_Triathlon.cpp
        INOI_WealthDisparity.cpp
        IOITC_BabaAndBitmasks.cpp
        kthDivisor.cpp
        LazyLoading.cpp
        lol.cpp
        lolol.cpp
        ManicMoving.cpp
        MaxPath.cpp
        myheader.h
        OPC_EqualGifts.cpp
        OPC_IndPyramid.cpp
        OPC_LeadGame.cpp
        OPC_MinimumTurnRoute.cpp
        OPC_RailwayCateringContacts.cpp
        OPC_SiruseriMetro.cpp
        Parquet.cpp
        PROC17_Traffic.cpp
        ProgressPie.cpp
        race.cpp
        RustAndMurderer.cpp
        SIS.cpp
        SPOJ_DNASequences.cpp
        SPOJ_DNASequencesCopy.cpp
        SPOJ_SubArrays.cpp
        SynchronousShopping.cpp
        TwoStrings.cpp
        untitled.cpp
        USBvsPS2.cpp
        UVa10684_Jackpot.cpp
        UVa10755_GarbageHeap.cpp
        UVa11456_Trainsorting.cpp
        UVa1177_AGeneralRecurrenceRelation.cpp
        UVa12405_Scarecrow.cpp
        UVa787_MaxSubSequenceProduct.cpp
        UVa927.cpp
        UVa_8Queens.cpp
        UVa_AnotherNQueenProblem.cpp
        UVa_BackToThe8Queens.cpp
        UVa_Bars.cpp
        UVa_BusDriverProblem.cpp
        UVa_CD.cpp
        UVa_CitizenAttentionOffices.cpp
        UVa_ClosestSums.cpp
        UVa_CoinCollector.cpp
        UVa_DartAMania.cpp
        UVa_ExactSum.cpp
        UVa_ExpertEnough.cpp
        UVa_FillTheContainers.cpp
        UVa_FractionsAgain.cpp
        UVa_Grapevine.cpp
        UVa_GraphColoring.cpp
        UVa_GraphColoring2.cpp
        UVa_GridGame.cpp
        UVa_GroceryStore.cpp
        UVa_HelpingFillBates.cpp
        UVa_LEDTest.cpp
        UVa_Lotto.cpp
        UVa_MonkeyAndOiledBamboo.cpp
        UVa_Password.cpp
        UVa_PathInColouredField.cpp
        UVa_PrimeRingProblem.cpp
        UVa_RatAttack.cpp
        UVa_Sales.cpp
        UVa_SolveIt.cpp
        UVa_SumItUp.cpp
        UVa_TourDeFrance.cpp
        UVa_Y2KAccountingBug.cpp
        UVa_Zones.cpp
        YogesMM.cpp OtherAlgorithms/Knuth-Morris-Pratt-Algorithm.cpp CC_ChefGoesLeftRight.cpp DataStructures/CC_ChefAndSubarrayQueries.cpp DataStructures/CC_ChefAndSubarrayQueries2.cpp DataStructures/SPOJ_GSS1.cpp GraphTheory/Implementation/DFSConnectedComponents.cpp CC_ProductOnSegment.cpp DataStructures/SPOJ_QTREE1.cpp DataStructures/CC_LoversGift.cpp DynamicProgramming/CF495D_ObsessiveString.cpp DynamicProgramming/CF383D_Antimatter.cpp CF525E_AnyaAndCubes.cpp OtherAlgorithms/Bitmasks.cpp CF688E_TheValuesYouCanMake.cpp GraphTheory/CF659E_NewReform.cpp DataStructures/CC_LoversGift2.cpp.cpp)

add_executable(Competitive_Programming ${SOURCE_FILES})
add_executable(CF347D_LuckyCommonSubsequence2 DynamicProgramming/CF347D_LuckyCommonSubsequence2.cpp)
add_executable(Knuth-Morris-Pratt-Algorithm OtherAlgorithms/Knuth-Morris-Pratt-Algorithm.cpp)
add_executable(ManachersAlgo OtherAlgorithms/ManachersAlgo.cpp)
add_executable(CC_ChefGoesLeftRight CC_ChefGoesLeftRight.cpp)
add_executable(CC_ChefAndSubarrayQueries DataStructures/CC_ChefAndSubarrayQueries.cpp)
add_executable(CC_ChefAndSubarrayQueries2 DataStructures/CC_ChefAndSubarrayQueries2.cpp)
add_executable(SPOJ_GSS1 DataStructures/SPOJ_GSS1.cpp)
add_executable(DFSConnectedComponents GraphTheory/Implementation/DFSConnectedComponents.cpp)
add_executable(CC_ProductOnSegment CC_ProductOnSegment.cpp)
add_executable(SPOJ_QTREE1 DataStructures/SPOJ_QTREE1.cpp)
add_executable(CC_LoversGift DataStructures/CC_LoversGift.cpp)
add_executable(CF495D_ObsessiveString DynamicProgramming/CF495D_ObsessiveString.cpp)
add_executable(CF383D_Antimatter DynamicProgramming/CF383D_Antimatter.cpp)
add_executable(CF525E_AnyaAndCubes CF525E_AnyaAndCubes.cpp)
add_executable(CF688E_TheValuesYouCanMake CF688E_TheValuesYouCanMake.cpp)
add_executable(CF659E_NewReform GraphTheory/CF659E_NewReform.cpp)